--- a/BookLib/AddBookWindow.xaml
+++ b/BookLib/AddBookWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookLib"
         mc:Ignorable="d"
-        Title="AddBookWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="AddBookWindow" Height="450" Width="244.061">
+    <Grid Margin="0,0,550,0">
+        <Label x:Name="label" Content="Add book" HorizontalAlignment="Left" Margin="50,50,-119,0" VerticalAlignment="Top" Width="69"/>
+        <TextBox x:Name="id_book" HorizontalAlignment="Left" Height="24" Margin="50,90,-190,0" TextWrapping="Wrap" Text="ID of book" VerticalAlignment="Top" Width="140" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="name_book" HorizontalAlignment="Left" Height="24" Margin="50,140,-190,0" TextWrapping="Wrap" Text="Name of book" VerticalAlignment="Top" Width="140" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="num_pages" HorizontalAlignment="Left" Height="24" Margin="50,190,-190,0" TextWrapping="Wrap" Text="Number of pages" VerticalAlignment="Top" Width="140" TextChanged="textBox_TextChanged"/>
+        <Button x:Name="create_button" Content="Create instance" HorizontalAlignment="Left" Margin="50,291,-190,0" VerticalAlignment="Top" Width="140" Click="create_button_Click"/>
+        <TextBox x:Name="year_publ" HorizontalAlignment="Left" Height="24" Margin="50,245,-190,0" TextWrapping="Wrap" Text="Year of publications" VerticalAlignment="Top" Width="140" TextChanged="textBox_TextChanged"/>
     </Grid>
 </Window>
